--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -34,8 +34,57 @@ header h1 {
     color: #E7FEFE;
 }
 
+#headerQuote {
+    margin: 0 auto;
+    padding-top: 8em;
+    width: 70%;
+}
+
+#headerQuote span {
+    font-size: 0.8em;
+    font-style: italic;
+}
+
+#headerQuote h3 {
+    color: #C1D2D2;
+}
+
 .card {
     padding: 20px 0 20px;
+    margin: 0 auto;
+}
+
+.img-size {
+    max-width: 750px;
+    margin-top: 20px;
+}
+
+.thumbs {
+    display: flex;
+}
+
+.thumb {
+    margin: 0 5px;
+    max-height: 300px;
+    flex: 1 1 300px;
+    overflow: hidden;
+}
+
+.img-thumbnail {
+    margin: auto;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.textCenterBold {
+    text-align: center;
+    font-weight: bold;
+}
+
+#disclaimor {
+    font-size: 0.9em;
+    font-weight: lighter;
+    margin: 0 0 5px 10px;
 }
 
 .fa-github-square {
